src/objects/shipment__c.object
<CustomObject>
    <fields>
        <fullName>part_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>part_number</label>
        <referenceTo>part__c</referenceTo>
        <relationshipLabel>shipments</relationshipLabel>
        <relationshipName>shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>quntity__c</fullName>
        <label>quntity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>supplier_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>supplier</label>
        <referenceTo>supplier__c</referenceTo>
        <relationshipLabel>shipments</relationshipLabel>
        <relationshipName>shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>shipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>